Add actual integration test to Infrastructure module